--- a/templates/ajax/help/shell.html.twig
+++ b/templates/ajax/help/shell.html.twig
@@ -44,7 +44,7 @@
                             {{ _self.search_entry(section,'the_night','Nachts'|trans({},'help'),'build/images/pictos/r_doutsd.gif',false) }}
                             {{ _self.search_entry(section,'extreme_camping','Wildes Campen'|trans({},'help'),'build/images/status/status_camper.gif',false) }}
                             {{ _self.search_entry(section,'ruin_exploration','Gebäude untersuchen'|trans({},'help'),'build/images/icons/small_exploration.gif',false) }}
-                            {{ _self.search_entry(section,'lost_souls','Du'|trans({},'help'),'build/images/item/item_soul_blue.gif',false) }}
+                            {{ _self.search_entry(section,'lost_souls','Verlorene Seelen'|trans({},'help'),'build/images/item/item_soul_blue.gif',false) }}
                         </ul>
                     </li>
 
