--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -125,6 +125,11 @@
     }
   }
   h4.preview-header { width: 100%; left: 0; padding: 4px; }
+
+  .soul .view-rp {
+    .postit, .tinystamp { margin-left: -80px; }
+    .money { margin-left: -40px; }
+  }
 }
 @media (max-width: (@screen-small-threshold - 1)) {
   .hide-@{screen-small} {display: none !important;};
@@ -151,6 +156,11 @@
 
   .soul .news .content {
     padding: 5px; background: #5c2b20; min-height: auto;
+  }
+
+  .soul .view-rp {
+    .postit, .tinystamp { margin-left: -135px; }
+    .money { margin-left: -66px; }
   }
 
   body:not(.icon-zoom-1-00) ul.inventory {
