--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -453,17 +453,32 @@
                 {% endembed %}
 
                 {% if not citizen_hidden and is_shaman %}
-                    <button id="fall_rain">
-                        {% if not zone.townZone %}
-                            <img alt="" src="{{ asset('build/images/icons/water.gif') }}">{{'Zone reinigen'|trans({}, 'game')}} ({% if is_shaman_role %}3 <div class="pm"></div>{% else %}1 <div class="ap"></div> + 1 <img style="float: none;vertical-align: baseline;" src="{{ asset('build/images/item/item_soul_blue.gif') }}" alt="" />{% endif %})
-                        {% else %}
-                            <img alt="" src="{{ asset('build/images/icons/water.gif') }}">{{'Regentanz ausführen'|trans({}, 'game')}} ({% if is_shaman_role %}3 <div class="pm"></div>{% else %}1 <div class="ap"></div> + 1 <img style="float: none;vertical-align: baseline;" src="{{ asset('build/images/item/item_soul_blue.gif') }}" alt="" />{% endif %})
-                        {% endif %}
-                        {% if (active_scout_mode) %}
-                            <img class="icon right" alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" />
-                        {% endif %}
-                        <div class="tooltip">{{ 'Diese Aktion ermöglicht die Reinigung der Zone durch herabfallenden Regen. Dieser kann den Brunnen in der Stadt füllen oder eine vernichtende Wirkung auf die umliegenden Zombies entfalten.'|trans({},'game') }}</div>
-                    </button>
+                    {% if is_shaman_job %}
+                        <button data-rain="job">
+                            {% if not zone.townZone %}
+                                <img alt="" src="{{ asset('build/images/icons/water.gif') }}">{{'Zone reinigen'|trans({}, 'game')}} (1 <div class="ap"></div> + 1 <img style="float: none;vertical-align: baseline;" src="{{ asset('build/images/item/item_soul_blue.gif') }}" alt="" />)
+                            {% else %}
+                                <img alt="" src="{{ asset('build/images/icons/water.gif') }}">{{'Regentanz ausführen'|trans({}, 'game')}} (1 <div class="ap"></div> + 1 <img style="float: none;vertical-align: baseline;" src="{{ asset('build/images/item/item_soul_blue.gif') }}" alt="" />)
+                            {% endif %}
+                            {% if (active_scout_mode) %}
+                                <img class="icon right" alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" />
+                            {% endif %}
+                            <div class="tooltip">{{ 'Diese Aktion ermöglicht die Reinigung der Zone durch herabfallenden Regen. Dieser kann den Brunnen in der Stadt füllen oder eine vernichtende Wirkung auf die umliegenden Zombies entfalten.'|trans({},'game') }}</div>
+                        </button>
+                    {% endif %}
+                    {% if is_shaman_role %}
+                        <button data-rain="role">
+                            {% if not zone.townZone %}
+                                <img alt="" src="{{ asset('build/images/icons/water.gif') }}">{{'Zone reinigen'|trans({}, 'game')}} (3 <div class="pm"></div>)
+                            {% else %}
+                                <img alt="" src="{{ asset('build/images/icons/water.gif') }}">{{'Regentanz ausführen'|trans({}, 'game')}} (3 <div class="pm"></div>)
+                            {% endif %}
+                            {% if (active_scout_mode) %}
+                                <img class="icon right" alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" />
+                            {% endif %}
+                            <div class="tooltip">{{ 'Diese Aktion ermöglicht die Reinigung der Zone durch herabfallenden Regen. Dieser kann den Brunnen in der Stadt füllen oder eine vernichtende Wirkung auf die umliegenden Zombies entfalten.'|trans({},'game') }}</div>
+                        </button>
+                    {% endif %}
                 {% endif %}
 
                 {% if not citizen_hidden %}
@@ -1138,10 +1153,10 @@
         {% endif %}
 
         {% if is_shaman %}
-        $.html.addEventListenerAll('#fall_rain', 'click', function() {
+        $.html.addEventListenerAll('[data-rain]', 'click', (e,elem) => {
             if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
                 return;
-            $.ajax.easySend( '{{ path('beyond_desert_shaman_rain') }}', {},
+            $.ajax.easySend( '{{ path('beyond_desert_shaman_rain') }}', {mode: elem.dataset.rain},
                 function () {
                     $.ajax.load(null, '{{ path('beyond_dashboard') }}', true);
                 } );
