--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -188,6 +188,7 @@
                         {% endif %}
                         {% embed "ajax/game/camping.html.twig" with {'list': camping, 'hidden': citizen_hidden} %}
                         {% endembed %}
+                        {{ help_lnk('Wildes Campen'|trans({}, 'help'), 'help', {'name': 'extreme_camping'}) }}
                     </div>
                 </div>
             </div>
