--- a/templates/ajax/public/maintenance_attack.html.twig
+++ b/templates/ajax/public/maintenance_attack.html.twig
@@ -43,6 +43,7 @@
                 <p>{{'Die Verdammten wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!'|trans({}, 'ghost')}}</p>
                 <p>{{'Registrierung sowie Log-in sind zur Zeit nicht möglich... Die Seite müsste gegen 00.30 wieder erreichbar sein.'|trans({}, 'ghost')}}</p>
                 <p><em>{{'Und ja, es wird Tote geben...'|trans({}, 'ghost')}}</em></p>
+                {{ help_lnk('Der Angriff der Zombiehorde'|trans({},'help'), 'help', {'name' : 'the_attack_of_the_hordes'}) }}
             </div>
 
             <div class="right">
