--- a/templates/ajax/soul/death.html.twig
+++ b/templates/ajax/soul/death.html.twig
@@ -42,7 +42,7 @@
                             {% if pictos|length > 0 %}
                             <b>{{ 'Du hast folgende Auszeichnungen verliehen bekommen:'|trans({},'game')  }}</b>
                             <ul>
-                            {% for picto in pictos %}
+                            {% for picto in pictos|sort((a, b) => a.prototype.label|trans({}, 'game') <=> b.prototype.label|trans({}, 'game')) %}
                                 <li {% if picto.prototype.rare %}class="rare"{% endif %}>
                                     <div>
                                         <img alt="" src="{{  asset('build/images/pictos/' ~ picto.prototype.icon ~ '.gif') }}" />
