Updated ranking stuff to exclude town with the flag

--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -509,7 +509,7 @@
                     helpTxt += options[i].getAttribute('title');
                 }
                 document.getElementById(help_id).innerHTML = helpTxt;
-                if (typeof f === 'function') f(elem.value);
+                if (typeof f === 'function') f(elem.value);:)
             }, true);
         }
 
