--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -257,6 +257,10 @@ div.tooltip.badge-tooltip {
                 background-color:#3b3249;
             }
 
+            .row-flex.common {
+                background-color: #0A3019;
+            }
+
             .row-flex.event {
               background-color: @myhordes-green-color;
             }
