--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -854,6 +854,8 @@
 
             let typingTimer, doneTypingInterval = 500;
             let searchBox = document.getElementById('{{ type }}-editor-add-users-search');
+
+            let enterPressed = false;
             const userSearchHandler = function() {
                 if (searchBox.value.length >= 3) {
                     $.ajax.background().load(
@@ -877,7 +879,8 @@
 
                                 searchBox.value = document.getElementById('{{ type }}-editor-add-users-list').innerHTML = '';
                                 document.getElementById('{{ type }}-editor-add-users-close').click();
-                            })
+                            });
+                            if (enterPressed) document.querySelector( '#{{ type }}-editor-add-users-list>.users-list-entry>div' ).dispatchEvent( new Event('click') );
                         }
                     );
                 }
@@ -889,7 +892,8 @@
                 typingTimer = setTimeout(userSearchHandler, doneTypingInterval);
             };
 
-            const userSearchHandlerDown = function () {
+            const userSearchHandlerDown = e => {
+                enterPressed = e.keyCode === 13;
                 clearTimeout(typingTimer);
             };
 
