--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -125,6 +125,10 @@
                         <div class="forum-header-bar">
                             <a href="#" x-ajax-href="{{ url('forum_list') }}">{{ 'Alle Foren'|trans({},'global') }}</a>
                             <span><i class="fa fa-caret-right"></i></span>
+                            {% if forum.worldForumLanguage %}
+                                <img style="height: 15px; width: auto;" alt="forum.worldForumLanguage" src="{{ asset('build/images/lang/' ~ forum.worldForumLanguage ~ '.png') }}" >
+                                <span><i class="fa fa-caret-right"></i></span>
+                            {% endif %}
                             <b><i class="fa fa-scroll"></i> {{ forum.title }}</b>
                         </div>
                         <div class="forum-button-bar">
