--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -312,6 +312,8 @@
   }
 
   .rucksack_status_union.status:before { background: url("../img/game-bar/cog2m.png") 0 0 no-repeat !important; }
+
+  #beyond_chat { height: calc( 100% - 16px ); margin-top: 8px; margin-bottom: 8px; }
 }
 
 .postfix(@threshold, @postfix) {
