--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -860,7 +860,7 @@
             <div class="row">
                 <h5><span class="float-right link small" x-ajax-sticky x-ajax-href='{{ path('beyond_dashboard') }}'>{{'Aktualisierung'|trans({}, 'game')}}</span>{{ 'Zonenregister'|trans({},'game') }} <a class="help-button"><div class="tooltip help">{{ 'Beachte: Alle hier geschriebenen Nachrichten gehen verloren, wenn alle Bürger die Zone verlassen.'|trans({},'global') }}</div>{{ 'Hilfe'|trans({},'global') }}</a></h5>
                 <div class="cell rw-12">
-                    <div class="row-flex v-center">
+                    <div class="row-flex stretch">
                         <div class="padded cell grow-1"><label><input id="beyond_chat" type="text" placeholder="{{ 'Deine Nachricht'|trans({},'global') }}" /></label></div>
                         <div class="padded cell grow-0"><button id="chat_button">{{ 'Senden'|trans({},'game') }}</button></div>
                     </div>
