--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -481,7 +481,7 @@ div.town-banner {
     text-align: right;
     font-size: 1.2rem;
     color: #ddab76;
-    &.disabled {
+    .disabled {
       text-decoration: line-through;
       font-weight: normal;
       color: grey;
