--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -987,3 +987,18 @@ ul.list{
   border-top: 1px solid #6C7188 !important; 
   background-color: #4e5162 !important;
 }
+
+.row-table.workshop {
+  border-bottom: 3px solid #f0d79e;
+  .header {
+    border-bottom: 3px solid #f0d79e;
+    font-size: 1.2rem;
+  }
+
+  .recipe > div {
+    &:not(:last-child) {
+      border-right: 1px solid #7e4d2a;
+    }
+    border-bottom: 1px solid #7e4d2a;
+  }
+}
