--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -314,6 +314,13 @@
   .rucksack_status_union.status:before { background: url("../img/game-bar/cog2m.png") 0 0 no-repeat !important; }
 
   #beyond_chat { height: calc( 100% - 16px ); margin-top: 8px; margin-bottom: 8px; }
+  div.beyond-escort-on:not(.beyond-escort-on-all)
+  // ,div.beyond-escort-off
+  {
+    > div {
+      border-right: 0 !important;
+    }
+  }
 }
 
 .postfix(@threshold, @postfix) {
