--- a/templates/ajax/soul/polls.html.twig
+++ b/templates/ajax/soul/polls.html.twig
@@ -107,13 +107,13 @@
                         <li class="desc">{{ selected.answerDescriptionByLang( answer, app.user.language )|raw }}</li>
                         <li>
                             <div class="row-flex wrap">
-                                <div class="cell grow-1">{{ selected.answerTitleByLang( answer, app.user.language )|raw }}</div>
+                                <div class="cell rw-9 rw-lg-8 rw-sm-12">{{ selected.answerTitleByLang( answer, app.user.language )|raw }}</div>
                                 {% if selected.startDate < 'now'|to_date and not selected.poll.participants.contains( app.user ) %}
-                                    <div class="cell shrink-1">
+                                    <div class="cell rw-3 rw-lg-4 rw-sm-12">
                                         <button class="small inline" data-poll="{{ path('soul_poll_participate', {id: selected.id, answer: answer.id}) }}">{{ 'Abstimmen'|trans({},'game') }}</button>
                                     </div>
                                 {% elseif selected.startDate < 'now'|to_date and (selected.endDate < 'now'|to_date or ( selected.showResultsImmediately and selected.poll.participants.contains( app.user ) ) or app.user|is_granted('ROLE_ORACLE')) %}
-                                    <div class="cell rw-3 rw-lg-4 rw-sm-12 shrink-0">
+                                    <div class="cell rw-3 rw-lg-4 rw-sm-12">
                                         <div class="right">{{ answer.tagNumber(group,tag) }}</div>
                                         <div class="vote-bar"><div class="bar" style="width: {{ total > 0 ? ( 100 * answer.tagNumber(group,tag)/total ) : '0' }}%"></div></div>
                                     </div>
